--- a/scss/main.css
+++ b/scss/main.css
@@ -11980,4 +11980,34 @@ footer.footer {
   position: absolute;
   bottom: 0;
   width: 100%;
+}
+
+p {
+  font-family: "EB Garamond", serif;
+  font-size: 18px;
+}
+
+.vitrine {
+  position: relative;
+}
+.vitrine::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(../assets/photos/lions1.png);
+  background-size: cover;
+  filter: brightness(0.7);
+}
+.vitrine * {
+  position: relative;
+}
+.vitrine .vitrine-content {
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }/*# sourceMappingURL=main.css.map */
