--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,3 +20,37 @@ footer.footer{
  width:100%;  
 }
 
+//attribution des polices//
+p{
+    font-family: $font-family-serif;
+    font-size: 18px;
+}
+
+
+
+.vitrine{
+    position: relative;
+    &::before{
+        content: "";
+        position: absolute;
+        top:0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url(../assets/photos/lions1.png);
+        background-size: cover;
+        filter: brightness(0.7);
+    }
+*{
+    //positionner les éléments devant le before//
+    position: relative;
+}
+ .vitrine-content{
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+ }
+}
+
