--- a/scss/main.css
+++ b/scss/main.css
@@ -11988,26 +11988,30 @@ p {
 }
 
 .vitrine {
-  position: relative;
-}
-.vitrine::before {
-  content: "";
-  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(../assets/photos/lions1.png);
   background-size: cover;
-  filter: brightness(0.7);
 }
-.vitrine * {
+
+.image-card {
   position: relative;
 }
-.vitrine .vitrine-content {
-  height: 300px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
+.image-card:hover .titre-image {
+  opacity: 1;
+}
+.image-card:hover img {
+  filter: brightness(0.3);
+}
+.image-card img {
+  transition: all 0.3s;
+}
+.image-card .titre-image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: all 0.3s;
 }/*# sourceMappingURL=main.css.map */
