--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,31 +26,34 @@ p{
     font-size: 18px;
 }
 
-
-
 .vitrine{
-    position: relative;
-    &::before{
-        content: "";
-        position: absolute;
-        top:0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-image: url(../assets/photos/lions1.png);
-        background-size: cover;
-        filter: brightness(0.7);
-    }
-*{
-    //positionner les éléments devant le before//
-    position: relative;
-}
- .vitrine-content{
-    height: 300px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
- }
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
 }
 
+.image-card{
+    position: relative;
+    &:hover{
+        .titre-image{
+            opacity: 1;
+        }
+        img{
+            filter: brightness(0.3);
+        }
+    }
+
+    img{
+        transition: all 0.3s;
+    }
+    .titre-image{
+        position: absolute;
+        top: 50%;
+        left:50%;
+        transform:translate(-50%, -50%) ;
+        opacity:0;
+        transition: all 0.3s;
+    }
+}
