--- a/scss/main.css
+++ b/scss/main.css
@@ -12014,4 +12014,27 @@ p {
   transform: translate(-50%, -50%);
   opacity: 0;
   transition: all 0.3s;
+}
+
+.form-label {
+  color: #228b22;
+}
+
+.hero-scene {
+  height: 9em;
+  position: relative;
+}
+.hero-scene::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(../assets/photos/tigre2.png);
+  background-size: cover;
+  filter: brightness(0.5);
+}
+.hero-scene * {
+  position: relative;
 }/*# sourceMappingURL=main.css.map */
