--- a/scss/main.scss
+++ b/scss/main.scss
@@ -57,3 +57,27 @@ p{
         transition: all 0.3s;
     }
 }
+
+.form-label{
+    color: $primary;
+}
+
+
+.hero-scene{
+    height: 9em;
+    position: relative;
+    &::before{
+        content:"";
+       position: absolute;
+       top: 0;
+       left: 0;
+       width: 100%;
+       height: 100%;
+       background-image: url(../assets/photos/tigre2.png);
+       background-size: cover;
+       filter:brightness(0.5)
+    }
+    *{
+        position: relative;
+    }
+}
